---
source: tpch.sqltest
expression: |-
  select
          s_name,
          s_address
      from
          supplier,
          nation
      where
          s_suppkey in (
              select
                  ps_suppkey
              from
                  partsupp
              where
                  ps_partkey in (
                      select
                          p_partkey
                      from
                          part
                      where
                          p_name like 'frosted%'
                  )
                  and ps_availqty > (
                      select
                          0.5 * sum(l_quantity)
                      from
                          lineitem
                      where
                          l_partkey = ps_partkey
                          and l_suppkey = ps_suppkey
                          and l_shipdate >= '1994-01-01'
                          and l_shipdate < '1995-01-01'
                  )
          )
          and s_nationkey = n_nationkey
          and n_name = 'IRAN'
      order by
          s_name;
info:
  statement_type: SELECT
  tables:
  - lineitem
  - part
  - partsupp
  - supplier
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--CORRELATED LIST SUBQUERY 1
|  |--LIST SUBQUERY 2
|  |  `--SCAN part
|  |--SEARCH partsupp USING INDEX sqlite_autoindex_partsupp_1 (ps_partkey=?)
|  `--CORRELATED SCALAR SUBQUERY 3
|     `--SCAN lineitem
|--SCAN supplier
|--SEARCH nation USING INTEGER PRIMARY KEY (rowid=?)
`--USE SORTER FOR ORDER BY
